Send icons to client

--- a/app/views/site/_active_user.html.slim
+++ b/app/views/site/_active_user.html.slim
@@ -1,3 +1,4 @@
 li 
   = user.name
   = button_tag("Comenzar test drive", id: "startButton", data: { user_id: user.id })
+  = button_tag("Stop", id: "stopButton", data: { user_id: user.id })
