--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the site controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.media-container {
+  position: relative;
+}
+
+#theImg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
