--- a/app/views/site/welcome.html.slim
+++ b/app/views/site/welcome.html.slim
@@ -1,4 +1,4 @@
 h1 Bienvenido a la demo de Live Video
 = form_tag(login_path)
-  = text_field_tag :name
+  = text_field_tag :name,nil,  placeholder: "Introduce tu nombre"
   = submit_tag "Enviar"
